<resources>
    <string name="app_name">MonoSimulator</string>
    <string name="open">Open</string>
    <string name="get">Send</string>
    <string name="close">Close</string>
    <string name="makeGraph">Make Graph</string>
    <string name="getData">Get Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
